deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ably-backend
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ably-backend
  template:
    metadata:
      labels:
        app: ably-backend
    spec:
      containers:
        - name: backend
          image: 098150418900.dkr.ecr.us-east-1.amazonaws.com/backend-api:latest
          ports:
            - containerPort: 8080
