backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ably-backend-lb
  namespace: my-app
spec:
  type: LoadBalancer
  selector:
    app: ably-backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
