backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ably-backend
  namespace: my-app
spec:
  selector:
    app: ably-backend
  ports:
    - port: 80
      targetPort: 8080
